--- a/css/result_browser.css
+++ b/css/result_browser.css
@@ -1,4 +1,7 @@
-html,body { height:95%; }
+html,body {
+    height:95%;
+    font-family: Arial, Helvetica, sans-serif;
+}
 
 {
     box-sizing: border-box;
@@ -136,7 +139,7 @@ html,body { height:95%; }
 .current_expected_rewards{
     position: relative;
     width: 450px;
-    height: 196px;
+    height: 194px;
     border: 2px solid;
     background-color: lightgrey;
 }
@@ -151,7 +154,6 @@ html,body { height:95%; }
     height: 656px;
     overflow-y: scroll;
     background-color: grey;
-    border: 1px solid;
 }
 
 .episode_box{
@@ -170,46 +172,59 @@ html,body { height:95%; }
 
 /*playback*/
 
+.display {
+    height: 30px;
+    float: left;
+    text-align: center;
+    width: 138px;
+    font-size: 18px;
+    padding-top: 5px;
+}
+
+.display_step {
+}
+
+.display_value {
+}
+
 .control_box{
     position: relative;
     height: 30px;
     width: 450px;
-    margin-left: 100px;
+    margin-left: 1px;
+    margin-top: 2px;
+    margin-bottom: 2px;
 }
 
 .btn{
+    cursor: pointer;
     border-radius: 5px;
     border: 2px solid #999999;
     float: left;
     height: 27px;
+    width: 30px;
 }
 
 .btn_play{
-    width: 30px;
-    background: url('img/buttons.png') -98px 0px;
+    background: url('img/buttons.png') -114px 0px;
 }
 
 .btn_pause{
-    width: 30px;
-    background: url('img/buttons.png') -50px 0;
+    background: url('img/buttons.png') -154px 0px;
 }
 
 .btn_first{
-    width: 35px;
-    background: url('img/buttons.png') 0 -100px;
+    background: url('img/buttons.png') -38px 0px;
 }
 
 .btn_prev{
-    width: 50px;
-    background: url('img/buttons.png') 0 -50px;
+    background: url('img/buttons.png') 0px 0px;
 }
 
 .btn_next{
-    width: 50px;
-    background: url('img/buttons.png') -78px -50px;
+    background: url('img/buttons.png') -230px 0px;
 }
 
 .btn_last{
-    width: 35px;
-    background: url('img/buttons.png') -93px -100px;
+    background: url('img/buttons.png') -192px 0px;
 }
